--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.8.2",
+    "@material-ui/icons": "^4.5.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.3",
     "passport": "^0.4.1",
